# dotfiles-mate-xmonad

./: .bash_aliases_extended  .editorconfig  .gitignore  README.md
git/: .gitconfig
motd/: motd-102  motd-31  motd-42  motd-default
nvim/: INSTALL.sh  init.vim
polybar/: config.ini
sakura/: INSTALL.sh  sakura.conf
sdk/: INSTALL.sh
wal/: sync.sh
xmonad/: .gitignore  INSTALL.sh  README.md  build  help.txt  xmobarminirc  xmobarrc  xmonad-config.cabal  xmonad-start.sh  xmonad.desktop  xmonad.hs
xmonad/scripts/: network-status.sh  polybar.sh  restartable.sh  trayer.sh
xmonad/xmobar/: network-status  volume-status  xmobarrc  xmobarrunner
xmonad/xmobar/icons/: ru.xpm  us.xpm
zsh/: .zshrc  INSTALL.sh
