cabal-version:      2.4
name:               xmonad-config
build-type:         Simple
version:            0.1.0.0
author:             Yaroslav Novitsky
maintainer:         rcr3211@gmail.com

executable xmonad-config
    main-is:          xmonad.hs
    other-modules:
    build-depends:
        base,
        containers,
        text,
        time,
        utf8-string,
        X11,
        X11-xft,
        xmonad >= 0.15,
        xmonad-contrib >= 0.16,
        xmonad-extras >= 0.15,
        xmobar >= 0.47.2
    -- hs-source-dirs:   xmonad
    default-language: Haskell2010
    -- ghc-options:      -Wall -Werror -fno-warn-missing-signatures -threaded
